--- a/src/message-envoye.html
+++ b/src/message-envoye.html
@@ -2,19 +2,19 @@
 layout: default
 permalink: /message-envoye/
 ---
-<section class="banner-4">
+<section class="banner-4" style="margin-top: 100px;">
   <div class="container to-100-per-990">
     <div class="banner_content2"></div>
   </div>
 </section>
-<section class="section-y">
+<section class="section-y" style="margin-bottom: 100px;">
   <div class="container">
     <p class="alert alert-success page404_content-p">
       Votre formulaire a bien été envoyé.<br>
       Vous serez recontacté aussi rapidement que possible&nbsp;!
     </p>
     <div class="mt-5">
-      <a href="/" class="menu_content-link--a">Retour sur la page d'accueil</a>
+      <a href="/" class="btn btn-primary">Retour sur la page d'accueil</a>
     </div>
   </div>
 </section>
