--- a/src/presentation.html
+++ b/src/presentation.html
@@ -148,7 +148,7 @@ description: "L'équipe de SIGET est composée de chauffagistes et plombiers pro
       <div class="row">
         <div class="col-sm-6">
           <h2>DES CONSEILS DE PRO 7J/7</h2>
-          <p>En faisant appel à SIGET, vous êtes assurés de bénéficier des meilleurs conseils et d’une expertise technique en ce qui concerne la salle de bains, la cuisine, les toilettes, et l’ensemble de votre habitation. Nos plombiers sont des professionnels exerçants depuis de nombreuses années en Essonne et sont à ce titre, réactifs, compétents et aimables. Toutes ces qualités font de notre entreprise de plomberie une référence dans la région. Pour profiter de notre expertise et de notre savoir-faire appelez-nous 24h/24 et 7j/7 sur notre ligne d’urgences au <a href="tel:<?= $call_phone1 ?>"><?= $conf_phone1 ?></a>.</p>
+          <p>En faisant appel à SIGET, vous êtes assurés de bénéficier des meilleurs conseils et d’une expertise technique en ce qui concerne la salle de bains, la cuisine, les toilettes, et l’ensemble de votre habitation. Nos plombiers sont des professionnels exerçants depuis de nombreuses années en Essonne et sont à ce titre, réactifs, compétents et aimables. Toutes ces qualités font de notre entreprise de plomberie une référence dans la région. Pour profiter de notre expertise et de notre savoir-faire appelez-nous 24h/24 et 7j/7 sur notre ligne d’urgences au <a href="tel:{{ site.data.company.phone1 }}">{{ site.data.company.phone2 }}</a>.</p>
   
         </div>
         <div class="col-sm-6">
