--- a/src/legales-mentions.html
+++ b/src/legales-mentions.html
@@ -53,7 +53,7 @@ pour plus d'informations sur nos prestations."
                     <h3 class="panel-title">Hébergeur</h3>
                 </div>
                 <div class="panel-body">
-                    {{ site.data.company.hebergement }}
+                    {{ site.data.company.gandi }}
                 </div>
             </div>
         </div>
