--- a/src/prestations.html
+++ b/src/prestations.html
@@ -36,7 +36,7 @@ aussi pour tout autre travail de plomberie !"
 
                 <div class="benefits">
                     <span class="ico">
-                        <img src="{{'/assets/img/icon/distance.jpg' | relative_url}}" alt="Picto distance">
+                        <img src="{{'/assets/img/icon/distance.jpg' | relative_url}}" alt="Picto distance" class="img-responsive">
                     </span>
                     <div class="texte">
                         <h3>INTERVENTIONS RAPIDES JUSQU'A 15KM AUTOUR DE BURES-SUR-YVETTE ET ANTONY</h3>
@@ -49,7 +49,7 @@ aussi pour tout autre travail de plomberie !"
 
                 <div class="benefits">
                     <span class="ico">
-                        <img src="{{'/assets/img/icon/7j.jpg' | relative_url}}" alt="ouvert 7j/7">
+                        <img src="{{'/assets/img/icon/7j.jpg' | relative_url}}" alt="ouvert 7j/7" class="img-responsive">
                     </span>
                     <div class="texte">
                         <h3>VOUS POUVEZ NOUS CONTACTER EN URGENCE UN DIMANCHE OU UN JOUR FÉRIÉ</h3>
@@ -91,7 +91,7 @@ aussi pour tout autre travail de plomberie !"
                 </a>
             </div>
             <div class="col-md-5">
-                <img src="{{'/assets/img/presta.jpg' | relative_url}}" alt="Diagnostic réparation ballon d'eau chaude">
+                <img src="{{'/assets/img/presta.jpg' | relative_url}}" alt="Diagnostic réparation ballon d'eau chaude" class="img-responsive">
             </div>
         </div>
     </div>
