update probleme responsive

--- a/src/accueil.html
+++ b/src/accueil.html
@@ -437,7 +437,7 @@ description: "Besoin d'un chauffagiste en Essonne ? N'hésitez pas à nous conta
 <section class="one cta-devis">
 	<div class="container">
 		<div class="row flex-middle">
-			<div class="col-sm-5 col-md-4">
+			<div class="col-sm-4 col-md-4 mb-5">
 				<div class="card">
 					<h3>Siget, installateur agréé De Dietrich </h3>
 					<p>
@@ -450,7 +450,7 @@ description: "Besoin d'un chauffagiste en Essonne ? N'hésitez pas à nous conta
 				</div>
 			</div>
 			<div class="pad10"></div>
-			<div class="col-sm-5 col-md-4">
+			<div class="col-sm-4 col-md-4 mb-5">
 				<div class="card">
 
 					<h3><strong>Des interventions de qualité, devis gratuit</strong></h3>
@@ -462,7 +462,7 @@ description: "Besoin d'un chauffagiste en Essonne ? N'hésitez pas à nous conta
 				</div>
 			</div>
 			<div class="pad10"></div>
-			<div class="col-sm-5 col-md-4">
+			<div class="col-sm-4 col-md-4 mb-5">
 				<div class="card">
 					<h3> Compétence d'experts et professionnalisme </h3>
 					<p>
