--- a/src/404.html
+++ b/src/404.html
@@ -18,7 +18,7 @@ title: Erreur 404
 		<p class="lead text-center">
 			Le serveur n'a pas trouvé le document souhaité.
 		</p>
-		<a href="{{ site.url }}/" class='button1'>
+		<a href="{{ site.baseurl }}/" class='button1'>
 			<span class='txt'>Retour à la page d'accueil</span>
 		</a>
 	</div>
