--- a/src/accueil.html
+++ b/src/accueil.html
@@ -24,7 +24,7 @@ description: "Besoin d'un chauffagiste en Essonne ? N'hésitez pas à nous conta
 
 					<div id="div-to-flex" class="item">
 
-						<a class="rollover" href="{{ site.url }}/prestations">
+						<a class="rollover" href="{{ site.baseurl }}/prestations">
 							<div class="icon-box bg-default text-center">
 								<div class="icon8"></div>
 								<div class="offset-top-30 inset-xl-left-35 inset-xl-right-35">
@@ -36,7 +36,7 @@ description: "Besoin d'un chauffagiste en Essonne ? N'hésitez pas à nous conta
 						</a>
 
 					</div>
-					<div class="item"> <a class="rollover" href="{{ site.url }}/prestations">
+					<div class="item"> <a class="rollover" href="{{ site.baseurl }}/prestations">
 							<div class="icon-box bg-default text-center">
 								<div class="icon5"></div>
 								<div class="offset-top-30 inset-xl-left-35 inset-xl-right-35">
@@ -46,7 +46,7 @@ description: "Besoin d'un chauffagiste en Essonne ? N'hésitez pas à nous conta
 								</div>
 							</div>
 						</a></div>
-					<div class="item"> <a class="rollover" href="{{ site.url }}/prestations">
+					<div class="item"> <a class="rollover" href="{{ site.baseurl }}/prestations">
 							<div class="icon-box bg-default text-center">
 								<div class="icon3"></div>
 								<div class="offset-top-30 inset-xl-left-35 inset-xl-right-35">
@@ -56,7 +56,7 @@ description: "Besoin d'un chauffagiste en Essonne ? N'hésitez pas à nous conta
 								</div>
 							</div>
 						</a></div>
-					<div class="item"> <a class="rollover" href="{{ site.url }}/prestations">
+					<div class="item"> <a class="rollover" href="{{ site.baseurl }}/prestations">
 							<div class="icon-box bg-default text-center">
 								<div class="icon2"></div>
 								<div class="offset-top-30 inset-xl-left-35 inset-xl-right-35">
@@ -66,7 +66,7 @@ description: "Besoin d'un chauffagiste en Essonne ? N'hésitez pas à nous conta
 								</div>
 							</div>
 						</a></div>
-					<div class="item"> <a class="rollover" href="{{ site.url }}/prestations">
+					<div class="item"> <a class="rollover" href="{{ site.baseurl }}/prestations">
 							<div class="icon-box bg-default text-center">
 								<div class="icon8"></div>
 								<div class="offset-top-30 inset-xl-left-35 inset-xl-right-35">
@@ -76,7 +76,7 @@ description: "Besoin d'un chauffagiste en Essonne ? N'hésitez pas à nous conta
 								</div>
 							</div>
 						</a></div>
-					<div class="item"> <a class="rollover" href="{{ site.url }}/prestations">
+					<div class="item"> <a class="rollover" href="{{ site.baseurl }}/prestations">
 							<div class="icon-box bg-default text-center">
 								<div class="icon1"></div>
 								<div class="offset-top-30 inset-xl-left-35 inset-xl-right-35">
@@ -86,7 +86,7 @@ description: "Besoin d'un chauffagiste en Essonne ? N'hésitez pas à nous conta
 								</div>
 							</div>
 						</a></div>
-					<div class="item"> <a class="rollover" href="{{ site.url }}/prestations">
+					<div class="item"> <a class="rollover" href="{{ site.baseurl }}/prestations">
 							<div class="icon-box bg-default text-center">
 								<div class="icon4"></div>
 								<div class="offset-top-30 inset-xl-left-35 inset-xl-right-35">
@@ -96,7 +96,7 @@ description: "Besoin d'un chauffagiste en Essonne ? N'hésitez pas à nous conta
 								</div>
 							</div>
 						</a></div>
-					<div class="item"> <a class="rollover" href="{{ site.url }}/prestations">
+					<div class="item"> <a class="rollover" href="{{ site.baseurl }}/prestations">
 							<div class="icon-box bg-default text-center">
 								<div class="icon7"></div>
 								<div class="offset-top-30 inset-xl-left-35 inset-xl-right-35">
@@ -244,7 +244,7 @@ description: "Besoin d'un chauffagiste en Essonne ? N'hésitez pas à nous conta
 						déplacerons rapidement quelle que soit votre ville, dans un rayon de 15km autour de
 						Bures-sur-Yvette et d'Antony.
 					</p>
-					<a href="{{ site.url }}/presentation" class="button2">Plus d'info</a>
+					<a href="{{ site.baseurl }}/presentation" class="button2">Plus d'info</a>
 				</div>
 			</div>
 		</div>
@@ -275,7 +275,7 @@ description: "Besoin d'un chauffagiste en Essonne ? N'hésitez pas à nous conta
 								afin de détecter la source du problème et effectuer le changement nécessaire.
 								Nous réalisons en supplément, tous les raccordements nécessaires à votre installation
 								concernant l’eau (réseau d’assainissement) et le gaz.</p>
-							<a href="{{ site.url }}/prestations" class="button1">
+							<a href="{{ site.baseurl }}/prestations" class="button1">
 								<span class="txt">En savoir +</span>
 							</a>
 						</div>
@@ -295,7 +295,7 @@ description: "Besoin d'un chauffagiste en Essonne ? N'hésitez pas à nous conta
 								Chauffagiste en Essonne installe également les baignoires, baignoires balnéos, douches à
 								l’italienne et tous les produits que vous souhaitez, pour créer l’espace que vous vous
 								étiez imaginé.</p>
-							<a href="{{ site.url }}/prestations" class="button1">
+							<a href="{{ site.baseurl }}/prestations" class="button1">
 								<span class="txt">En savoir +</span>
 							</a>
 						</div>
@@ -313,7 +313,7 @@ description: "Besoin d'un chauffagiste en Essonne ? N'hésitez pas à nous conta
 								installer.
 								Suite à l’installation de votre chaudière par nos soins, vous bénéficiez d’une garantie
 								décennale et en option d’un entretien annuel ou d’un contrat de maintenance.</p>
-							<a href="{{ site.url }}/prestations" class="button1">
+							<a href="{{ site.baseurl }}/prestations" class="button1">
 								<span class="txt">En savoir +</span>
 							</a>
 						</div>
@@ -328,7 +328,7 @@ description: "Besoin d'un chauffagiste en Essonne ? N'hésitez pas à nous conta
 								ou classique, murale ou au sol. Nous vous en proposerons une large gamme. Chacune
 								possédant ses propres caractéristiques, nos <strong>professionnels vous guident pour le
 									choix de votre chaudière à gaz.</strong></p>
-							<a href="{{ site.url }}/prestations" class="button1">
+							<a href="{{ site.baseurl }}/prestations" class="button1">
 								<span class="txt">En savoir +</span>
 							</a>
 						</div>
@@ -343,7 +343,7 @@ description: "Besoin d'un chauffagiste en Essonne ? N'hésitez pas à nous conta
 								chauffe-eau instantanés et les chauffe-eau à accumulation, également appelés cumulus.
 								Nos spécialistes vous conseilleront sur le choix du chauffe-eau électrique qui
 								correspond le mieux à votre foyer et à vos attentes.</p>
-							<a href="{{ site.url }}/prestations" class="button1">
+							<a href="{{ site.baseurl }}/prestations" class="button1">
 								<span class="txt">En savoir +</span>
 							</a>
 						</div>
@@ -358,7 +358,7 @@ description: "Besoin d'un chauffagiste en Essonne ? N'hésitez pas à nous conta
 								Vous bénéficiez de la <strong>qualité et du service d’un professionnel</strong>. Et en
 								plus, vous pouvez bénéficier d’un crédit d’impôt jusqu’à 30% ! Quelle que soit la nature
 								de vos travaux, vous avez la possibilité de faire une estimation avec notre équipe.</p>
-							<a href="{{ site.url }}/prestations" class="button1">
+							<a href="{{ site.baseurl }}/prestations" class="button1">
 								<span class="txt">En savoir +</span>
 							</a>
 						</div>
@@ -381,7 +381,7 @@ description: "Besoin d'un chauffagiste en Essonne ? N'hésitez pas à nous conta
 						salle de bains, douche italienne, nous nous occupons de la pose de votre système de chauffage,
 						et nous assurons le dépannage de vos équipements au prix juste. Faites confiance à la qualité
 						professionnelle pour des travaux impeccables, réalisés en temps et en heure.</p>
-					<a href="{{ site.url }}/contact" class="button1">
+					<a href="{{ site.baseurl }}/contact" class="button1">
 						<span class="txt">Contactez-nous</span>
 					</a>
 				</div>
@@ -456,7 +456,7 @@ description: "Besoin d'un chauffagiste en Essonne ? N'hésitez pas à nous conta
 					<h3><strong>Des interventions de qualité, devis gratuit</strong></h3>
 					<p class="text-left">Nos équipes se font un honneur d’effectuer des interventions de qualité. Ils
 						n’hésitent pas à vous conseiller... </p>
-					<a href="{{ site.url }}/devis" class="button2">
+					<a href="{{ site.baseurl }}/devis" class="button2">
 						<span class="txt">Demandez un devis</span>
 					</a>
 				</div>
