--- a/src/prestations.html
+++ b/src/prestations.html
@@ -284,11 +284,11 @@ aussi pour tout autre travail de plomberie !"
                     <tfoot>
                         <tr align="center">
                             <td> </td>
-                            <td align="center"> <a href="devis" class="button1">
+                            <td align="center"> <a href="{{ site.baseurl }}/devis/" class="button1">
                                     <span class="txt">Choisir</span>
                                 </a></td>
                             <td class="vide"></td>
-                            <td align="center"> <a href="devis" class="button1">
+                            <td align="center"> <a href="{{ site.baseurl }}/devis/" class="button1">
                                     <span class="txt">Choisir</span>
                                 </a></td>
 
