--- a/src/presentation.html
+++ b/src/presentation.html
@@ -117,11 +117,11 @@ description: "L'équipe de SIGET est composée de chauffagistes et plombiers pro
             <tfoot>
               <tr align="center">
                 <td> </td>
-                <td align="center"> <a href="devis" class="button1">
+                <td align="center"> <a href="{{ site.baseurl }}/devis/" class="button1">
                     <span class="txt">Choisir</span>
                   </a></td>
                 <td class="vide"></td>
-                <td align="center"> <a href="devis" class="button1">
+                <td align="center"> <a href="{{ site.baseurl }}/devis/" class="button1">
                     <span class="txt">Choisir</span>
                   </a></td>
   
