--- a/src/devis.html
+++ b/src/devis.html
@@ -1,9 +1,8 @@
 ---
 layout: default
 permalink: /devis/
-title: "Notre formulaire de devis gratuit disponible en ligne"
-description: "Nous pouvons vous faire une estimation du coût de nos prestations pour vos vérandas et pergolas, il suffit
-de remplir notre formulaire de devis en ligne !"
+title: "Demandez un devis gratuit pour votre projet de chauffage !"
+description: "Remplissez notre formulaire de devis gratuitement en ligne afin d'obtenir une estimation précise et rapide de vos travaux. Nous répondons rapidement !"
 ---
 
 <section class="mini-slider wow " data-wow-duration="1s" data-wow-delay="0">
