--- a/src/zone.html
+++ b/src/zone.html
@@ -1,8 +1,8 @@
 ---
 layout: default
 permalink: /zone/
-title: "Zone d'intervention"
-description: "Découvrez la zone d'intervention de SIGET, spécialisée dans la réparation et l'entretien des chaudières et des pompes à chaleur."
+title: "Nous intervenons dans de nombreuses villes d'Ile-de-France"
+description: "Nous intervenons rapidement dans le 91 et le 78, mais nous pouvons également nous déplacer dans tous les départements de l'Ile-de-France sur demande !"
 ---
 
 <section class="mini-slider wow " data-wow-duration="1s" data-wow-delay="0">
